# koreaalpha-core

./: .gitignore  README.md  pyproject.toml
koreaalpha_core/: __init__.py  kr_market.py
koreaalpha_core/factor/: scoring.py
koreaalpha_core/portfolio/: __init__.py  backtest.py  benchmark.py  frontier.py  metrics.py  score.py
koreaalpha_core/stock/: __init__.py  fundamental.py
koreaalpha_core/technical/: indicators.py
koreaalpha_core/utils/: formatters.py  validators.py
tests/: test_backtest_enhanced.py  test_benchmark.py  test_factor_scoring.py  test_frontier.py  test_fundamental.py  test_growth_trends.py  test_kr_market.py  test_metrics.py  test_new_metrics.py  test_score.py  test_technical.py  test_utils.py
